--- a/00_Mvc/Web.config
+++ b/00_Mvc/Web.config
@@ -66,7 +66,10 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="EmulatorDbContext" connectionString="metadata=res://*/Datos.Model1.csdl|res://*/Datos.Model1.ssdl|res://*/Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Emulator;user id=Usuario;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<!--<add name="EmulatorDbContext" connectionString="metadata=res://*/Datos.Model1.csdl|res://*/Datos.Model1.ssdl|res://*/Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Emulator;user id=Usuario;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+		<add name="EmulatorDbContext" connectionString="metadata=res://*/Datos.Model1.csdl|res://*/Datos.Model1.ssdl|res://*/Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+			workstation id=Emulator.mssql.somee.com;packet size=4096;user id=xema24_SQLLogin_1;pwd=tia9yiyg8o;data source=Emulator.mssql.somee.com;persist security info=False;initial catalog=Emulator 
+			&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<system.webServer>
 
